# screenreader-computer-vision

./: INSTALL_MACOS.md  README.md  SETUP.md  demo.py  demo_results.json  railway.toml  requirements.txt  requirements_minimal.txt  requirements_tesseract_only.txt  screen_reader.py  test_screen_reader.py
docs/: RAILWAY_DEPLOYMENT.md
web-app/screenreader-backend/: Dockerfile  README.md  build.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt  screen_reader.py
web-app/screenreader-backend/app/: main.py
web-app/screenreader-frontend/: README.md  index.html  package-lock.json  package.json  railway.toml  vite.config.ts
web-app/screenreader-frontend/src/: App.tsx
web-app/screenreader-frontend/src/components/: AnalyticsPanel.tsx  EnhancedSettings.tsx  HistoryDashboard.tsx
web-app/screenreader-frontend/src/hooks/: use-keyboard-shortcuts.ts  use-ocr-analytics.ts  use-ocr-history.ts
web-app/screenreader-frontend/src/lib/: storage.ts
web-app/screenreader-frontend/src/types/: index.ts
