[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.13"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
opencv-python = ">=4.10.0.86"
numpy = ">=1.21.0,<2.0"
pillow = ">=8.0.0"
pytesseract = ">=0.3.10"
torch = ">=1.13.0,<2.5.0"
torchvision = ">=0.14.0,<0.20.0"
easyocr = ">=1.7.0,<1.8.0"
pyautogui = ">=0.9.50"
matplotlib = ">=3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
